Fixed overflow for button

--- a/src/FilterConditionSelector/FilterConditionSelector.scss
+++ b/src/FilterConditionSelector/FilterConditionSelector.scss
@@ -95,7 +95,6 @@
 		cursor: pointer;
 
 		text-overflow: ellipsis;
-		overflow: hidden;
 		white-space: nowrap;
 
 		&:hover,
